# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: camera.cpp  camera.h  main.cpp  ray.cpp  ray.h  scene.cpp  scene.h  surface.cpp  surface.h  utils.cpp  utils.h  vec3.cpp  vec3.h
src/bvh/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h
src/gl/: output_window.cpp  output_window.h  readme.md  wireframe_renderer.cpp  wireframe_renderer.h
src/hitables/: bvh_node.cpp  bvh_node.h  hitable.h  hitable_list.cpp  hitable_list.h  moving_sphere.cpp  moving_sphere.h  sphere.cpp  sphere.h
src/materials/: checker_texture.cpp  checker_texture.h  dialectric.cpp  dialectric.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h  pbr_material.cpp  pbr_material.h
src/materials/textures/: constant_texture.cpp  constant_texture.h  image_texture.cpp  image_texture.h  noise_texture.cpp  noise_texture.h  perlin.cpp  perlin.h  texture.h
src/output/: output_window.cpp  output_window.h
src/surfaces/: hitable.cpp  hitable.h  sphere.cpp  sphere.h  surface.h
